코드 설명 추가

--- a/withganada_deaplearning/src/classification_audio_A.ipynb
+++ b/withganada_deaplearning/src/classification_audio_A.ipynb
@@ -26,13 +26,14 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bomij33/With-GANADA/blob/bomi/code/audio_classification_A.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bomij33/With-GANADA/blob/bomi/withganada_deaplearning/src/classification_audio_A.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Tensorflow 버전 다운로드 2.8.0"
+        "# Tensorflow 버전 다운로드 2.8.0\n",
+        "##### tensorflow 버전 2.8.0 실행 필요함. 버전이 맞지 않으면 uninstall 후 install함"
       ],
       "metadata": {
         "id": "PA6S3Wm8D4D4"
@@ -41,68 +42,31 @@
     {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
-        "print(tf.__version__)"
+        "# 먼저 현재 tensorflow 버전 확인\n",
+        "# import tensorflow as tf\n",
+        "# print(tf.__version__)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "b6FxXRPnT828",
-        "outputId": "f419cad7-dbd7-4804-9f44-858828cea07d"
+        "id": "b6FxXRPnT828"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.8.2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!pip uninstall tensorflow"
+        "# !pip uninstall tensorflow"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KU2qUfwbxImC",
-        "outputId": "c91c5048-981b-4f01-8d93-8a028eae3efa"
+        "id": "KU2qUfwbxImC"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found existing installation: tensorflow 2.8.2+zzzcolab20220719082949\n",
-            "Uninstalling tensorflow-2.8.2+zzzcolab20220719082949:\n",
-            "  Would remove:\n",
-            "    /usr/local/bin/estimator_ckpt_converter\n",
-            "    /usr/local/bin/import_pb_to_tensorboard\n",
-            "    /usr/local/bin/saved_model_cli\n",
-            "    /usr/local/bin/tensorboard\n",
-            "    /usr/local/bin/tf_upgrade_v2\n",
-            "    /usr/local/bin/tflite_convert\n",
-            "    /usr/local/bin/toco\n",
-            "    /usr/local/bin/toco_from_protos\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow-2.8.2+zzzcolab20220719082949.dist-info/*\n",
-            "    /usr/local/lib/python3.7/dist-packages/tensorflow/*\n",
-            "Proceed (y/n)? y\n",
-            "  Successfully uninstalled tensorflow-2.8.2+zzzcolab20220719082949\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!pip install tensorflow==2.8.0"
+        "# !pip install tensorflow==2.8.0"
       ],
       "metadata": {
         "colab": {
@@ -189,8 +153,8 @@
       "cell_type": "code",
       "source": [
         "# restart 후 확인\n",
-        "import tensorflow as tf\n",
-        "print(tf.__version__)"
+        "# import tensorflow as tf\n",
+        "# print(tf.__version__)"
       ],
       "metadata": {
         "colab": {
@@ -232,7 +196,7 @@
         },
         "outputId": "10a91d62-5be5-496a-fd42-054c725cea00"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +217,7 @@
       "metadata": {
         "id": "mG4zvhT7ES63"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +230,7 @@
       "metadata": {
         "id": "nH0sWXDSyeSc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +249,7 @@
         "id": "8HVbzOwCGAUQ",
         "outputId": "4c056283-b203-49d9-e752-37ea37a188b7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +285,7 @@
         "id": "Aumki802EVg5",
         "outputId": "0bf8d4eb-3f64-49b3-bf15-77d2538e1e4d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1517,7 +1481,7 @@
         "id": "LMyoGSYqiA2D",
         "outputId": "07a214c9-c65c-4774-a1da-5c62a642b3c7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1560,7 +1524,7 @@
         "id": "bjXXExOuiHcr",
         "outputId": "c6c209ab-afce-4dae-ccf2-6eea2daab920"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1602,7 +1566,7 @@
         "id": "WY8Ro3dfdARJ",
         "outputId": "a9e75014-9d09-4279-b590-83d3d2855e19"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1643,7 +1607,7 @@
         "id": "FsjDBDIOEVd4",
         "outputId": "74589cec-5a42-47d6-85b1-7ceeda570e65"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1671,7 +1635,7 @@
         "id": "92aGHRkbkisj",
         "outputId": "6467748a-a396-4ddc-b9c2-5f924feb2b68"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1693,7 +1657,7 @@
       "metadata": {
         "id": "aghztZe9-1N5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1710,7 +1674,7 @@
         "outputId": "d04733be-c244-4258-d03a-ba1ef5abd5d3",
         "id": "7mTCyMzWiVAZ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1753,7 +1717,7 @@
         "outputId": "bbe49738-bb89-4a5e-9e74-bb8fd3ce59a4",
         "id": "R6-jXew3iVAZ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,7 +1761,7 @@
         "id": "1b-zDbF--1LQ",
         "outputId": "5070c1c2-b340-4e3f-fb53-281c4de7f873"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,7 +1787,7 @@
         "outputId": "35bfc956-4f30-4628-e1fc-0511d912aaa7",
         "id": "kvxddiJmibQf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,7 +1830,7 @@
         "outputId": "a5fd1769-8051-4208-db2e-dce29bf59714",
         "id": "o02lV35TibQg"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1910,7 +1874,7 @@
       "metadata": {
         "id": "-KNY-Pztk8uI"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1927,7 +1891,7 @@
         "id": "Yb7uzqDONoSF",
         "outputId": "41b157ef-e935-4f64-edda-65fba5fe1992"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1946,7 +1910,7 @@
       "metadata": {
         "id": "xjE3MuKwNcGt"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1972,7 +1936,7 @@
         },
         "outputId": "5a64dda0-9d66-4a0d-d30a-a1beae0b1ab5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1987,7 +1951,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 데이터 분리"
+        "# 데이터 분리\n",
+        "###### train, test 데이터로 분리"
       ],
       "metadata": {
         "id": "EjXer_ucN67c"
@@ -2003,7 +1968,7 @@
       "metadata": {
         "id": "Z54gJGmi-1Ig"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2021,7 +1986,7 @@
         "outputId": "7930e4f5-2078-4d40-e186-ba63ab3ba304",
         "id": "ar3Q1ezWinMR"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2065,7 +2030,7 @@
         "outputId": "fbe958c1-25aa-49b5-fac1-69b9d541b6bf",
         "id": "RFKC_o3IinMS"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2107,7 +2072,7 @@
         "id": "9DF-X34ifJgr",
         "outputId": "3ffc7171-f784-4dcc-cbe0-4ca86b895181"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2153,8 +2118,17 @@
       "metadata": {
         "id": "xULPFYqYA4Pv"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 모델 생성"
+      ],
+      "metadata": {
+        "id": "UhsPUPEzXYHX"
+      }
     },
     {
       "cell_type": "code",
@@ -2218,7 +2192,7 @@
         "id": "hx8Zeb-Bgleh",
         "outputId": "253d525f-721d-4877-d9c1-350057d0c771"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,6 +2270,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 학습"
+      ],
+      "metadata": {
+        "id": "3IP9FWiaXdpb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plot_losses = PlotLosses()\n",
@@ -2305,12 +2288,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 302
+          "height": 322
         },
         "id": "ksVvwmtJjQ9S",
         "outputId": "b3f76aef-d518-40f3-96c5-cdca9cda7251"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2335,6 +2318,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 평가 & 예측"
+      ],
+      "metadata": {
+        "id": "b0jKQ00bXgSw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "loss, acc = model.evaluate(test_x, test_y)\n",
@@ -2356,7 +2348,7 @@
         },
         "outputId": "ed4d4c12-5c3d-4974-b7c8-eafe0ddb98d2"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2382,14 +2374,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 모델 저장"
+      ],
+      "metadata": {
+        "id": "_t8sKcXZXi58"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "model.save('../gdrive/MyDrive/Audio/model/ganada_A_220908.h5')"
+        "model.save('../gdrive/MyDrive/Audio/model/ganada_A.h5')"
       ],
       "metadata": {
         "id": "dFjSSA8-p1oV"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2398,7 +2399,7 @@
       "metadata": {
         "id": "xKnl2dsLRCx8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     }
   ]
