코드 설명 추가

--- a/withganada_deaplearning/src/classification_audio_B.ipynb
+++ b/withganada_deaplearning/src/classification_audio_B.ipynb
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bomij33/With-GANADA/blob/bomi/code/audio_classification_B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bomij33/With-GANADA/blob/bomi/withganada_deaplearning/src/classification_audio_B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,6 +41,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 먼저 현재 tensorflow 버전 확인\n",
         "# import tensorflow as tf\n",
         "# print(tf.__version__)"
       ],
@@ -232,7 +233,7 @@
         },
         "outputId": "bb0277fe-c6a4-4885-f337-53375828287e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +254,7 @@
       "metadata": {
         "id": "mG4zvhT7ES63"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +267,7 @@
       "metadata": {
         "id": "nH0sWXDSyeSc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +286,7 @@
         "id": "8HVbzOwCGAUQ",
         "outputId": "61b8df07-3d0b-4cad-f42b-ddaf3f2f40cb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +324,7 @@
         "id": "Aumki802EVg5",
         "outputId": "596b2c78-bf97-4a37-8fea-9ea8dc6ca56f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1500,7 +1501,7 @@
         "id": "LMyoGSYqiA2D",
         "outputId": "ddbd17e9-2d39-4c47-c7b1-5507b4242e5a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1543,7 +1544,7 @@
         "id": "bjXXExOuiHcr",
         "outputId": "4df9a30d-22a4-438d-c3c6-264ace44581d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1585,7 +1586,7 @@
         "id": "WY8Ro3dfdARJ",
         "outputId": "95ae6c7b-7b40-4173-8734-dd5351490267"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1627,7 @@
         "id": "FsjDBDIOEVd4",
         "outputId": "f43c3aca-5b37-4538-81ad-042800f8f48e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1654,7 +1655,7 @@
         "id": "92aGHRkbkisj",
         "outputId": "4a0dd723-8070-4c0e-d5a2-eda0862c30f4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,7 +1677,7 @@
       "metadata": {
         "id": "aghztZe9-1N5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1693,7 +1694,7 @@
         "outputId": "1d3bef9f-9863-41b7-ffec-f3715ce45511",
         "id": "7mTCyMzWiVAZ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1736,7 +1737,7 @@
         "outputId": "d939777b-d3a6-4b2e-d990-689a2695bf9a",
         "id": "R6-jXew3iVAZ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1780,7 +1781,7 @@
         "id": "1b-zDbF--1LQ",
         "outputId": "3448b2d6-160a-415e-9b65-b8fd0d78864a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1806,7 +1807,7 @@
         "outputId": "3511c77b-cae7-4c3d-a46f-913a0b8bc458",
         "id": "kvxddiJmibQf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1849,7 +1850,7 @@
         "outputId": "844ae4a8-d077-456f-9a18-1de9a019afab",
         "id": "o02lV35TibQg"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1893,7 +1894,7 @@
       "metadata": {
         "id": "-KNY-Pztk8uI"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1910,7 +1911,7 @@
         "id": "Yb7uzqDONoSF",
         "outputId": "50bd740a-f5be-4ea3-d1f4-217406bdb833"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1929,7 +1930,7 @@
       "metadata": {
         "id": "xjE3MuKwNcGt"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1955,7 +1956,7 @@
         },
         "outputId": "c511506e-ed06-41cd-ae6e-0fbab4534b48"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1970,7 +1971,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 데이터 분리"
+        "# 데이터 분리\n",
+        "###### train, test 데이터로 분리"
       ],
       "metadata": {
         "id": "EjXer_ucN67c"
@@ -1986,7 +1988,7 @@
       "metadata": {
         "id": "Z54gJGmi-1Ig"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2004,7 +2006,7 @@
         "outputId": "fc6c6638-3376-4dbd-a136-712537b29a3a",
         "id": "ar3Q1ezWinMR"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2048,7 +2050,7 @@
         "outputId": "2e59a5b0-c289-41c5-ef0e-816dff5fd618",
         "id": "RFKC_o3IinMS"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2090,7 +2092,7 @@
         "id": "9DF-X34ifJgr",
         "outputId": "507e8612-cec5-499e-d2fd-57b4a8a839e1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2138,8 +2140,17 @@
       "metadata": {
         "id": "xULPFYqYA4Pv"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 모델 생성"
+      ],
+      "metadata": {
+        "id": "JkJPcUoWX_8y"
+      }
     },
     {
       "cell_type": "code",
@@ -2217,7 +2228,7 @@
         "id": "pT7VVvOygvXA",
         "outputId": "064d5fcb-2a14-4456-e295-07d2c0c4c914"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2316,6 +2327,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 학습"
+      ],
+      "metadata": {
+        "id": "PVEsjUgkX7ZU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plot_losses = PlotLosses()\n",
@@ -2330,7 +2350,7 @@
         "id": "ksVvwmtJjQ9S",
         "outputId": "58e8060b-726a-465e-ccbd-c4dbb2c8ce15"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2355,6 +2375,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 평가 & 예측"
+      ],
+      "metadata": {
+        "id": "PfeUCYZqX4m2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "loss, acc = model.evaluate(test_x, test_y)\n",
@@ -2376,7 +2405,7 @@
         },
         "outputId": "d7b436f2-0fce-458a-b1ef-a59c27774921"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2402,14 +2431,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 모델 저장"
+      ],
+      "metadata": {
+        "id": "EMnimELeX06C"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "model.save('../gdrive/MyDrive/Audio/model/ganada_B_220908_acc97.h5')"
+        "model.save('../gdrive/MyDrive/Audio/model/ganada_B.h5')"
       ],
       "metadata": {
         "id": "dFjSSA8-p1oV"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     }
   ]
